--- a/HTML-CSS-Mini-Course/Introduction-to-HTML-Exercise/L1_05_Table/Solution/style.css
+++ b/HTML-CSS-Mini-Course/Introduction-to-HTML-Exercise/L1_05_Table/Solution/style.css
@@ -1,3 +1,8 @@
+h2 {
+    text-align: center;
+    font-family: sans-serif;
+}
+
 th, table, td {
     border-color: black;
     border-style: solid;
@@ -5,6 +10,7 @@ th, table, td {
 td, th {
     margin: 0;
     border-spacing: 0;
+    text-align: right;
 }
 td{
     border-width: 1px 1px 0 0;
