--- a/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_01_Fitness-Site/Solution/style.css
+++ b/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_01_Fitness-Site/Solution/style.css
@@ -32,7 +32,7 @@ h3, h1 {
     margin-top: 0;
 }
 
-hi {
+h1 {
     font-size: 40px;
     width: 60%;
 }
@@ -80,7 +80,7 @@ button:hover {
     cursor: pointer;
 }
 
-article {
+#info > article {
     background-color: #f9690e;
     display: inline-block;
     padding: 40px;
