try new link for font awesome import

--- a/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/style.css
+++ b/HTML-CSS-Mini-Course/Introduction-to-CSS-Lab/L2_02_Portfolio/Solution/style.css
@@ -56,7 +56,7 @@ main {
 }
 
 #contacts {
-    padding: 42px 268px 0 43px;
+    padding: 42px 268px 6px 43px;
     background-color: #555c6f;
     color: #b2b6c0;
     float: left;
